<resources>
    <string name="app_name">ECO FCT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="next">Próximo</string>
    <string name="skip">Saltar</string>
    <string name="start">Iniciar</string>

    <string name="mantem_te_atualizado">Mantem te atualizado</string>
    <string name="a_app_vai_emitindo_notifica_es_mantem_te_atento">A app vai emitindo notificações mantem te atento!!</string>
    <string name="bem_vindo_2_app">Bem Vindo á APP</string>
    <string name="completamente_redesenhada_para_uma_jortec_mais_interativa">Desenhada para uma reciclagem mais interativa.</string>
    <string name="partifica_nos_workshop_e_mantem_te_atento_s_redes_socias_do_evento">Scanna os códigos nos Ecopontos</string>
    <string name="ganha_pr_mios_fantasticos">Ganha prêmios fantasticos</string>
    <string name="o_n_cleo_de_engenharia_eletrot_cnica_e_de_computadores_neec_da_faculdade_de_ci_ncias_e_tecnologia_uma_associa_o_sem_fins_lucrativos_composto_pelos_estudantes_de_mieec_da_fct">O Núcleo de Engenharia Eletrotécnica e de Computadores (NEEC) da Faculdade de Ciências e Tecnologia é uma associação sem fins lucrativos composto pelos estudantes de MiEEC da FCT.</string>
    <string name="receber_um_email_do_neec_com_a_sua_password">Receberá um email do neec com a sua password</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="pol_tica_de_privacidade">Política de privacidade</string>
    <string name="aceito_eula_e_pol_tica_de_privacidade">Aceito EULA e Política de privacidade</string>
    <string name="eula">EULA</string>
    <string name="email_inexistente">Email Inexistente</string>
    <string name="tente_novamente">Tentar Novamente</string>
    <string name="Email_empty">Email não pode estar vazio</string>
    <string name="verificando">Verificando</string>
    <string name="loading">Loading..</string>
    <string name="sobre_app">Sobre APP</string>
    <string name="informa_es">Informações</string>
    <string name="ajuda">Ajuda</string>
    <string name="ecoponto_fct">Ecoponto FCT</string>
    <string name="log_out">Log out</string>
    <string name="neec_website">NEEC Website</string>
    <string name="near">Mais perto</string>
    <string name="scan">Scan QRCode</string>
    <string name="algo_correu_mal">Algo correu mal</string>
    <string name="pergunta">Pergunta:</string>
    <string name="emailenviado">Email enviado</string>
    <string name="ok">OK</string>
    <string name="nome">Nome</string>
    <string name="errado">Errado</string>
    <string name="voltar">Voltar</string>
    <string name="ranking">Ranking</string>
    <string name="name">Nome:</string>
    <string name="pontos">Pontos:</string>
    <string name="posicao">Posição:</string>
    <string name="concurso">Concurso</string>
    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
</resources>
