<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item
            android:id="@+id/nav_first_layout"
            android:icon="@drawable/ic_reuse"
            android:title="@string/ecoponto_fct" />

      <item
        android:id="@+id/rank"
        android:icon="@drawable/podium"
        android:title="@string/ecoponto_fct" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_black_18dp"
            android:title="@string/ajuda" />


      <item
        android:id="@+id/website"
        android:icon="@drawable/web"
        android:title= "@string/neec_website" />

        <item
            android:id="@+id/nav_third_layout"
            android:icon="@drawable/ic_us"
            android:title="@string/sobre_app" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/log_out" />



</menu>
